--- a/assets/scss/components/_cookie-banner.scss
+++ b/assets/scss/components/_cookie-banner.scss
@@ -105,7 +105,7 @@
 #hs-eu-decline-button,
 #hs-eu-cookie-settings-button {
   padding: 10px 20px !important;
-  border-radius: 6px !important;
+  border-radius: 4px !important;
   font-size: 14px !important;
   font-weight: 500 !important;
   cursor: pointer !important;
